Removed production cfg and added it to gitignore

--- a/config/production.cfg.example
+++ b/config/production.cfg.example
@@ -1,4 +1,4 @@
-MONGO_BILLING_DBNAME = "DB_NAME"
-MONGO_BILLING_PORT = PORT
+MONGO_PSI_DBNAME = "DB_NAME"
+MONGO_PSI_PORT = PORT
 SECRET_KEY = "super secret key"
 DEBUG="true"
