--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ Flask-Script==2.0.5
 flask-mongoengine==0.7.1
 Pillow==2.7.0
 mongoengine==0.8.7
+gunicorn=19.3.0
 flask-login==0.2.11
 Flask-BabelEx==0.9.2
